--- a/recipy.ipynb
+++ b/recipy.ipynb
@@ -22,12 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://therecipecritic.com/korean-ground-beef-rice-bowls/'\n",
-    "url2 = 'https://therecipecritic.com/ground-beef-enchiladas/'"
+    "url = 'https://therecipecritic.com/korean-ground-beef-rice-bowls/'"
    ]
   },
   {
@@ -123,52 +122,6 @@
    "outputs": [],
    "source": [
     "recipe = _parse_recipe(recipe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Korean Ground Beef and Rice Bowls',\n",
-       " 'images': ['https://therecipecritic.com/wp-content/uploads/2017/04/0C4A8325-4.jpg',\n",
-       "  'https://therecipecritic.com/wp-content/uploads/2017/04/0C4A8325-4-500x500.jpg',\n",
-       "  'https://therecipecritic.com/wp-content/uploads/2017/04/0C4A8325-4-500x375.jpg',\n",
-       "  'https://therecipecritic.com/wp-content/uploads/2017/04/0C4A8325-4-480x270.jpg'],\n",
-       " 'ingredients': ['1 pound lean ground beef (90% lean)',\n",
-       "  '3  garlic cloves (minced)',\n",
-       "  '1/4 cup packed brown sugar',\n",
-       "  '1/4 cup reduced-sodium soy sauce',\n",
-       "  '2 teaspoons sesame oil',\n",
-       "  '1/4 teaspoon ground ginger',\n",
-       "  '1/4 teaspoon crushed red pepper flakes',\n",
-       "  '1/4 teaspoon pepper',\n",
-       "  '2 cups hot cooked white or brown rice',\n",
-       "  'sliced green onions and sesame seeds for garnish'],\n",
-       " 'instructions': ['In a large skillet  cook the ground beef and garlic breaking it into crumbles over medium heat until no longer pink.',\n",
-       "  'In a small bowl whisk brown sugar, soy sauce, sesame oil, ginger, red pepper flakes and pepper. Pour over the ground beef and let simmer for another minute or two.',\n",
-       "  'Serve over hot rice and garnish with green onions and sesame seeds.']}"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipdb import set_trace"
    ]
   },
   {
